# io-adapters

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  io_adapters.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  io_adapters.doctree  modules.doctree
.github/workflows/: ci_tests.yaml  publish.yaml
_sources/: index.rst.txt  io_adapters.rst.txt  modules.rst.txt
docs/: Makefile
docs/source/: conf.py  index.rst
src/io_adapters/: __init__.py  _adapters.py  _clock.py  _container.py  _io_funcs.py  _registries.py
tests/: test_adapters.py  test_adapters_apis.py  test_container.py
tests/mock_data/: mock.json
