[project]
name = "io-adapters"
version = "0.2.1"
description = "Dependency Injection Adapters"
readme = "README.md"
authors = [
    { name = "ed cuss", email = "edcussmusic@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.4.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "repo-mapper-rs>=0.3.0",
    "ruff>=0.14.9",
    "sphinx>=9.0.4",
    "ty>=0.0.9",
]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["src/io_adapters/_io_funcs.py"]
